Better spacing (with subtitles no longer shown)

--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -86,6 +86,7 @@
   &-Description {
     // font-family: var.$serif;
     font-size: 0.875rem;
+    margin-top: 0.5em;
     // line-height: 1.25em;
     margin-bottom: 0.5em;
     @media screen and (min-width: var.$bkpt_lg) {
